examples/test/testpolicy1913.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1913
  namespace: namespace267
spec:
  podSelector:
    matchLabels:
      key47: value33
      key32: value3
      key49: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value17
          key7: value2
      podSelector:
        matchLabels:
          key12: value31
